--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
 
     env:
       # 프로젝트
-      PROJECT_NAME: AIrena-ai
+      PROJECT_NAME: ai-rena-ai
       # AWS 관련
       EC2_HOST: ${{ secrets.EC2_HOST }}
       EC2_USER: ${{ secrets.EC2_USER }}
